syntax="proto3"; //protobuffers v3 versiyonu kullaniliyor

package player; // proto paketinin adi
option go_package="playerpb"; // generate edilecek go paketinin adi

// Player mesaj tipinin tanimi
message Player{
    string id=1;
    string player_id=2;
    string fullname=3;
    string position=4;
    string bio=5;
}

// Operasyonlarin kullandigi request ve response mesajlarina ait tanimlamalar
message AddPlayerReq{
    Player plyr=1;
}

message AddPlayerRes{
    Player plyr=1;
}

message EditPlayerReq{
    Player plyr=1;
}

message EditPlayerRes{
    Player plyr=1;
}

message RemovePlayerReq{
    string player_id=1;
}

message RemovePlayerRes{
    bool removed=1;
}

message GetPlayerReq{
    string player_id=1;
}

message GetPlayerRes{
    Player plyr=1;
}

message GetPlayerListReq{}

message GetPlayerListRes{
    Player plyr=1;
}

// servis ve operasyon tanimlari
service PlayerService{
    rpc GetPlayer(GetPlayerReq) returns (GetPlayerRes);
    rpc GetPlayerList(GetPlayerListReq) returns (stream GetPlayerListRes); //server bazlı streaming kullanacağımız için dönüş parametresi stream tipinden
    rpc AddPlayer(AddPlayerReq) returns (AddPlayerRes);
    rpc EditPlayer(EditPlayerReq) returns (EditPlayerRes);
    rpc RemovePlayer(RemovePlayerReq) returns (RemovePlayerRes);
}